# green-access

./: .gitignore  README.md
client/: pyproject.toml
client/green_access/: __init__.py  green_access_client.py
client/green_access/tests/: tests.py
experiments/: pyproject.toml
experiments/green_access_experiments/: config.json  fetch_jobs.py  functions.py  main.py  user.py
notebooks/: Plot Results.ipynb
notebooks/data/: job_log.csv  task_profiles.csv
notebooks/data/run-2d981fd3-7537-4988-ae5f-8c5cc041f151/users-3-strategy-rr-endpoints-4/: user_0_trace.jsonl  user_1_trace.jsonl  user_2_trace.jsonl
notebooks/data/run-90fd518b-ea2b-43cf-a659-5049110ebe6a/users-3-strategy-rr-endpoints-4/: user_0_trace.jsonl  user_1_trace.jsonl  user_2_trace.jsonl
notebooks/data/run-e5767848-ed79-4272-8e51-95b50aa3169e/users-3-strategy-rr-endpoints-4/: user_0_trace.jsonl  user_1_trace.jsonl  user_2_trace.jsonl
reproducibility/: endpoint_config.py  endpoint_environment.yaml  experiment_config.json  requirements.txt
service/: pyproject.toml
service/green_access_service/: access_control.py  admin.py  common.py  messages.py  models.py  monitor.py  prediction.py  records.py  router.py
view/green-access/: index.html  nohup.out  package-lock.json  package.json
view/green-access/src/: App.vue  main.js
view/green-access/src/components/: Tasks.vue
